--- a/index18.css
+++ b/index18.css
@@ -223,6 +223,55 @@ padding: 111px 50px 50px 50px;
 
 
 
+/*---------- page 3 ------------------*/
+
+
+.sustainability {
+    display: flex;
+    width: 100%;
+    height: 100%;
+
+
+}
+
+.sus-one, .sus-two, .sus-three {
+    flex: 1 1 33%;
+}
+
+
+
+
+
+.sus-img {
+    width: 100%;
+    height: 100vh;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+
+}
+
+
+
+
+
+.sus-txt {
+    color: #FFF;
+    text-align: center;
+    position: relative
+}
+
+
+.sus-txt > strong {
+    font-size: 2rem;
+}
+
+
+
 
 /* ~~~~~~~~ 1024px 이하 ~~~~~~~~ */
 
@@ -305,6 +354,29 @@ padding: 111px 50px 50px 50px;
 
         }
 
+
+
+        .sustainability {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            width: 100vw;
+
+        }
+
+
+        .sus-one, .sus-two, .sus-three {
+            flex: 1 1 100%;
+        }
+
+
+        .sus-img {
+            width: 100%;
+            height: 100%;
+        
+        }
+        
+
 }
 
 
@@ -363,5 +435,14 @@ padding: 111px 50px 50px 50px;
         justify-content: space-between;
     }
 
+
+    .sus-txt > strong {
+        font-size: 1.2rem;
+    }
+
+
+    .sus-txt > p {
+        font-size: 0.8rem;
+    }
 
 }   
